8374639: Static archive with AOTClassLinking breaks dynamic archive

Reviewed-by: coleenp, matsaave