src/hotspot/share/cds/dynamicArchive.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2025, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -48,6 +48,7 @@
 #include "logging/log.hpp"
 #include "memory/metaspaceClosure.hpp"
 #include "memory/resourceArea.hpp"
+#include "oops/array.hpp"
 #include "oops/klass.inline.hpp"
 #include "runtime/arguments.hpp"
 #include "runtime/os.hpp"
@@ -95,7 +96,6 @@ public:
   void sort_methods(InstanceKlass* ik) const;
   void remark_pointers_for_instance_klass(InstanceKlass* k, bool should_mark) const;
   void write_archive(char* serialized_data, AOTClassLocationConfig* cl_config);
-  void gather_array_klasses();
 
 public:
   // Do this before and after the archive dump to see if any corruption
@@ -132,7 +132,6 @@ public:
 
     init_header();
     gather_source_objs();
-    gather_array_klasses();
     reserve_buffer();
 
     log_info(cds, dynamic)("Copying %d klasses and %d symbols",
@@ -159,7 +158,6 @@ public:
       ArchiveBuilder::OtherROAllocMark mark;
       SystemDictionaryShared::write_to_archive(false);
       cl_config = AOTClassLocationConfig::dumptime()->write_to_archive();
-      DynamicArchive::dump_array_klasses();
 
       serialized_data = ro_region()->top();
       WriteClosure wc(ro_region());
@@ -175,8 +173,6 @@ public:
 
     write_archive(serialized_data, cl_config);
     release_header();
-    DynamicArchive::post_dump();
-
     post_dump();
 
     verify_universe("After CDS dynamic dump");
@@ -185,30 +181,6 @@ public:
   virtual void iterate_roots(MetaspaceClosure* it) {
     AOTArtifactFinder::all_cached_classes_do(it);
     SystemDictionaryShared::dumptime_classes_do(it);
-    iterate_primitive_array_klasses(it);
-  }
-
-  void iterate_primitive_array_klasses(MetaspaceClosure* it) {
-    for (int i = T_BOOLEAN; i <= T_LONG; i++) {
-      assert(is_java_primitive((BasicType)i), "sanity");
-      Klass* k = Universe::typeArrayKlass((BasicType)i);  // this give you "[I", etc
-      assert(AOTMetaspace::in_aot_cache_static_region((void*)k),
-        "one-dimensional primitive array should be in static archive");
-      ArrayKlass* ak = ArrayKlass::cast(k);
-      while (ak != nullptr && ak->in_aot_cache()) {
-        Klass* next_k = ak->array_klass_or_null();
-        if (next_k != nullptr) {
-          ak = ArrayKlass::cast(next_k);
-        } else {
-          ak = nullptr;
-        }
-      }
-      if (ak != nullptr) {
-        assert(ak->dimension() > 1, "sanity");
-        // this is the lowest dimension that's not in the static archive
-        it->push(&ak);
-      }
-    }
   }
 };
 
@@ -367,26 +339,6 @@ void DynamicArchiveBuilder::write_archive(char* serialized_data, AOTClassLocatio
   log_info(cds, dynamic)("%d klasses; %d symbols", klasses()->length(), symbols()->length());
 }
 
-void DynamicArchiveBuilder::gather_array_klasses() {
-  for (int i = 0; i < klasses()->length(); i++) {
-    if (klasses()->at(i)->is_objArray_klass()) {
-      ObjArrayKlass* oak = ObjArrayKlass::cast(klasses()->at(i));
-      Klass* elem = oak->element_klass();
-      if (AOTMetaspace::in_aot_cache_static_region(elem)) {
-        // Only capture the array klass whose element_klass is in the static archive.
-        // During run time, setup (see DynamicArchive::setup_array_klasses()) is needed
-        // so that the element_klass can find its array klasses from the dynamic archive.
-        DynamicArchive::append_array_klass(oak);
-      } else {
-        // The element_klass and its array klasses are in the same archive.
-        assert(!AOTMetaspace::in_aot_cache_static_region(oak),
-          "we should not gather klasses that are already in the static archive");
-      }
-    }
-  }
-  log_debug(aot)("Total array klasses gathered for dynamic archive: %d", DynamicArchive::num_array_klasses());
-}
-
 class VM_PopulateDynamicDumpSharedSpace: public VM_Heap_Sync_Operation {
   DynamicArchiveBuilder _builder;
 public:
@@ -403,76 +355,9 @@ public:
   }
 };
 
-// _array_klasses and _dynamic_archive_array_klasses only hold the array klasses
-// which have element klass in the static archive.
-GrowableArray<ObjArrayKlass*>* DynamicArchive::_array_klasses = nullptr;
-Array<ObjArrayKlass*>* DynamicArchive::_dynamic_archive_array_klasses = nullptr;
-
 void DynamicArchive::serialize(SerializeClosure* soc) {
   SymbolTable::serialize_shared_table_header(soc, false);
   SystemDictionaryShared::serialize_dictionary_headers(soc, false);
-  soc->do_ptr(&_dynamic_archive_array_klasses);
-}
-
-void DynamicArchive::append_array_klass(ObjArrayKlass* ak) {
-  if (_array_klasses == nullptr) {
-    _array_klasses = new (mtClassShared) GrowableArray<ObjArrayKlass*>(50, mtClassShared);
-  }
-  _array_klasses->append(ak);
-}
-
-void DynamicArchive::dump_array_klasses() {
-  assert(CDSConfig::is_dumping_dynamic_archive(), "sanity");
-  if (_array_klasses != nullptr) {
-    ArchiveBuilder* builder = ArchiveBuilder::current();
-    int num_array_klasses = _array_klasses->length();
-    _dynamic_archive_array_klasses =
-        ArchiveBuilder::new_ro_array<ObjArrayKlass*>(num_array_klasses);
-    for (int i = 0; i < num_array_klasses; i++) {
-      builder->write_pointer_in_buffer(_dynamic_archive_array_klasses->adr_at(i), _array_klasses->at(i));
-    }
-  }
-}
-
-void DynamicArchive::setup_array_klasses() {
-  if (_dynamic_archive_array_klasses != nullptr) {
-    for (int i = 0; i < _dynamic_archive_array_klasses->length(); i++) {
-      ObjArrayKlass* oak = _dynamic_archive_array_klasses->at(i);
-      Klass* elm = oak->element_klass();
-      assert(AOTMetaspace::in_aot_cache_static_region((void*)elm), "must be");
-
-      if (elm->is_instance_klass()) {
-        assert(InstanceKlass::cast(elm)->array_klasses() == nullptr, "must be");
-        InstanceKlass::cast(elm)->set_array_klasses(oak);
-      } else {
-        assert(elm->is_array_klass(), "sanity");
-        assert(ArrayKlass::cast(elm)->higher_dimension() == nullptr, "must be");
-        ArrayKlass::cast(elm)->set_higher_dimension(oak);
-      }
-    }
-    log_debug(aot)("Total array klasses read from dynamic archive: %d", _dynamic_archive_array_klasses->length());
-  }
-}
-
-void DynamicArchive::make_array_klasses_shareable() {
-  if (_array_klasses != nullptr) {
-    int num_array_klasses = _array_klasses->length();
-    for (int i = 0; i < num_array_klasses; i++) {
-      ObjArrayKlass* k = ArchiveBuilder::current()->get_buffered_addr(_array_klasses->at(i));
-      k->remove_unshareable_info();
-    }
-  }
-}
-
-void DynamicArchive::post_dump() {
-  if (_array_klasses != nullptr) {
-    delete _array_klasses;
-    _array_klasses = nullptr;
-  }
-}
-
-int DynamicArchive::num_array_klasses() {
-  return _array_klasses != nullptr ? _array_klasses->length() : 0;
 }
 
 void DynamicArchive::dump_impl(bool jcmd_request, const char* archive_name, TRAPS) {
